WRITING-1648: Fix line wrapping w/ external link indicator

--- a/themes/mongodb/static/src/css/mongodb-docs.css
+++ b/themes/mongodb/static/src/css/mongodb-docs.css
@@ -243,7 +243,6 @@ a.headerlink:hover {
 a.reference.external:after {
     font-family: FontAwesome;
     content: "\f08e";
-    display: inline-block;
     padding-left: 3px;
     vertical-align: middle;
 }
